update build file.

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,7 +1,7 @@
 before_install:
   - apt-get --quiet update --yes
   - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1 libgmp-dev
-  - apt-get install jq automake autoconf libtool pkg-config gettext perl python flex bison gperf
+  - apt install jq automake autoconf libtool pkg-config gettext perl python flex bison gperf
   - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
   - unzip -d android-sdk-linux android-sdk.zip
   - echo y | android-sdk-linux/tools/bin/sdkmanager "platforms;android-33" >/dev/null
