--- a/jitpack.yml
+++ b/jitpack.yml
@@ -14,20 +14,51 @@ before_install:
   - set +o pipefail
   - yes | android-sdk-linux/tools/bin/sdkmanager --licenses
   - set -o pipefail
-  - export ANDROID_NDK_ROOT=$PWD/android-sdk-linux
-  - ls $PWD
-  - export OPENSSL_SRC=$PWD/openssl
-  - export NO_DOCKER=true
-  - cd strongswan/src/frontends/android/openssl
-  - ./compile.sh
-  - echo 'Done compiling openssl'
+  - export ANDROID_NDK=$PWD/android-sdk-linux
+  - lib="$PWD/app/libs"
+  - PATH=$ANDROID_NDK/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH
+  - pushd $$OpenSSL$$
+  - CC=armv7a-linux-androideabi16-clang ./Configure android-arm no-shared no-ssl3
+    no-engine no-dso no-asm no-hw no-comp no-stdio -fPIC -DOPENSSL_PIC -D__ANDROID_API__=16
+    -ffast-math -O3 -funroll-loops
+  - make -j $(nproc)
+  - mkdir -p "${lib}/armeabi-v7a"
+  - cp libcrypto.a ${lib}/armeabi-v7a/
+  - make distclean
+  - CC=aarch64-linux-android21-clang ./Configure android-arm64 no-shared no-ssl3
+    no-engine no-dso no-asm no-hw no-comp no-stdio -fPIC -DOPENSSL_PIC -D__ANDROID_API__=21
+    -ffast-math -O3 -funroll-loops
+  - make -j $(nproc)
+  - mkdir -p "${lib}/arm64-v8a"
+  - cp libcrypto.a ${lib}/arm64-v8a/
+  - make distclean
+  - CC=i686-linux-android16-clang ./Configure android-x86 no-shared no-ssl3 no-engine
+    no-dso no-asm no-hw no-comp no-stdio -fPIC -DOPENSSL_PIC -D__ANDROID_API__=16
+    -ffast-math -O3 -funroll-loops
+  - make -j $(nproc)
+  - mkdir -p "${lib}/x86"
+  - cp libcrypto.a ${lib}/x86/
+  - make distclean
+  - CC=x86_64-linux-android21-clang ./Configure android-x86_64 no-shared no-ssl3
+    no-engine no-dso no-asm no-hw no-comp no-stdio -fPIC -DOPENSSL_PIC -D__ANDROID_API__=21
+    -ffast-math -O3 -funroll-loops
+  - make -j $(nproc)
+  - mkdir -p "${lib}/x86_64"
+  - cp libcrypto.a ${lib}/x86_64/
+  - cp -R include/ ${lib}/
+  - make distclean
+  - popd
+  - echo "LOCAL_PATH := \$(call my-dir)" >"${lib}/Android.mk"
+  - echo "include \$(CLEAR_VARS)" >>"${lib}/Android.mk"
+  - echo "LOCAL_MODULE := libcrypto_static" >>"${lib}/Android.mk"
+  - echo "LOCAL_SRC_FILES := \$(TARGET_ARCH_ABI)/libcrypto.a" >>"${lib}/Android.mk"
+  - echo "LOCAL_EXPORT_C_INCLUDES := \$(LOCAL_PATH)/include" >>"${lib}/Android.mk"
+  - echo "include \$(PREBUILT_STATIC_LIBRARY)" >>"${lib}/Android.mk"
   - cd ../../../../
-  - ls
   - ./autogen.sh
-  - echo 'Done auto gen'
-  - ./configure.sh
-  - echo 'Done configure'
-  - make dist
+  - ./configure --disable-defaults
+  - make dist -j $(nproc)
+  - ls app/libs
 install:
   - echo 'Done making dist'
   - cd strongswan/src/frontends/android
