update build file.

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -10,7 +10,7 @@ before_install:
   - echo y | android-sdk-linux/tools/bin/sdkmanager "ndk;21.3.6528147" >/dev/null
   - export ANDROID_HOME=$PWD/android-sdk-linux
   - ls $ANDROID_HOME
-  - export ANDROID_NDK_HOME=$PWD/android-sdk-linux
+  - export ANDROID_NDK_HOME=/home/jitpack/build/android-sdk-linux/ndk
   - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
   - chmod +x ./gradlew
   - set +o pipefail
