--- a/jitpack.yml
+++ b/jitpack.yml
@@ -9,7 +9,7 @@ before_install:
   - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;33.0.2" >/dev/null
   - echo y | android-sdk-linux/tools/bin/sdkmanager "ndk;21.3.6528147" >/dev/null
   - export ANDROID_HOME=$PWD/android-sdk-linux
-  - export ANDROID_NDK_HOME=/home/jitpack/build/android-sdk-linux/ndk
+  - export ANDROID_NDK_HOME=/home/jitpack/build/android-sdk-linux/ndk/21.3.6528147
   - ls $ANDROID_NDK_HOME
   - PATH=$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH
   - chmod +x ./gradlew
