--- a/jitpack.yml
+++ b/jitpack.yml
@@ -60,7 +60,7 @@ before_install:
   - echo "LOCAL_SRC_FILES := \$(TARGET_ARCH_ABI)/libcrypto.a" >>"${lib}/Android.mk"
   - echo "LOCAL_EXPORT_C_INCLUDES := \$(LOCAL_PATH)/include" >>"${lib}/Android.mk"
   - echo "include \$(PREBUILT_STATIC_LIBRARY)" >>"${lib}/Android.mk"
-  - pushd $strongswan$
+  - pushd $strongswan
   - ./autogen.sh
   - ./configure --disable-defaults
   - make dist -j $(nproc)
